starting to set up firebase

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,26 @@ yarn-error.log*
 # venv files
 venv/
 
+# Firebase build and deployment files
+/firebase-debug.log
+/firebase-debug.*.log
+.firebaserc
+
+# Firebase Hosting
+/firebase.json
+*.cache
+hosting/.cache
+
+# Firebase Functions
+/functions/node_modules/
+/functions/.env
+/functions/package-lock.json
+
+# Firebase Emulators
+/firebase-*.zip
+/.firebase/
+/emulator-ui/
+
 # vercel
 .vercel
 
